<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.KnowAboutUser"
    android:background="@color/mainBackground"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/mainBackground"
        />

    <androidx.cardview.widget.CardView
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/mainBackground"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        android:src="@drawable/placeholder"
        android:elevation="20dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/userImage"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/userNameTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/userNameEtField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userNameTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEt"
                    android:hint="@string/developer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/userEmailTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email"
                app:layout_constraintTop_toBottomOf="@id/userNameEtField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailEtField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userEmailTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailEt"
                    android:hint="@string/developer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/userPhoneNumberTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_phone"
                app:layout_constraintTop_toBottomOf="@id/userEmailEtField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPhoneNumberEtField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userPhoneNumberTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPhoneNumberEt"
                    android:hint="@string/developer_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|phone"
                    android:maxLength="10"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/userCollegeTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_college"
                app:layout_constraintTop_toBottomOf="@id/userPhoneNumberEtField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userCollegeEtField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userCollegeTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userCollegeEt"
                    android:hint="@string/developer_college"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/userCourseTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_course"
                app:layout_constraintTop_toBottomOf="@id/userCollegeEtField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userCourseEtField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userCourseTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userCourseEt"
                    android:hint="@string/developer_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/userLocationTT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location"
                app:layout_constraintTop_toBottomOf="@id/userCourseEtField"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userLocationEtField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/userLocationTT"
                app:hintEnabled="false"
                android:background="@drawable/custom_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userLocationEt"
                    android:hint="New Delhi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createUserBt"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="Get Started"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/userLocationEtField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/custom_button"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/userLocationEtField"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="25dp"
                android:visibility="invisible"
                android:background="@drawable/custom_progressbar"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>